
Checking stuff in before heading home.
----------------------------------------------------------------------
Tue Mar 13 04:44:09 2001                        Michael Jennings (mej)

Finished and tested mediatool, and updated TODO list.
----------------------------------------------------------------------
Sun Mar 18 22:16:19 2001                        Michael Jennings (mej)

Commented and rearranged some code.
----------------------------------------------------------------------
Tue Mar 20 03:31:14 2001                        Michael Jennings (mej)

It imports SRPM's now....
----------------------------------------------------------------------
Tue Mar 20 16:01:38 2001                        Michael Jennings (mej)

Spec file changes.
----------------------------------------------------------------------
Tue Mar 20 22:52:48 2001                        Michael Jennings (mej)

Still working on srctool....
----------------------------------------------------------------------
Wed Mar 21 22:29:24 2001                        Michael Jennings (mej)

Working on prep....
----------------------------------------------------------------------
Wed Mar 21 23:36:56 2001                        Michael Jennings (mej)

Fixes...
----------------------------------------------------------------------
Thu Mar 22 01:35:31 2001                        Michael Jennings (mej)

Yay, prep works.
----------------------------------------------------------------------
Thu Mar 22 01:35:54 2001                        Michael Jennings (mej)

Update todo list.
----------------------------------------------------------------------
Mon Mar 26 00:47:16 2001                        Michael Jennings (mej)

Moved the common functions into a Perl module and began adding other
Perl modules for interoperation between tools.  Doing this right will
take some time, but it doesn't all have to be done right away.
----------------------------------------------------------------------