@@ -21,7 +21,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: Pkg.pm,v 1.1 2001/03/26 09:48:54 mej Exp $
+# $Id: Pkg.pm,v 1.2 2001/03/27 05:44:39 mej Exp $
 #
 
 package Avalon::Pkgtool;
@@ -36,7 +36,7 @@ BEGIN {
 
     @ISA         = ('Exporter');
     # Exported functions go here
-    @EXPORT      = ('&parse_spec_file');
+    @EXPORT      = ('$specdata', '&parse_spec_file');
     %EXPORT_TAGS = ( );
 
     # Exported variables go here
@@ -47,6 +47,7 @@ our @EXPORT_OK;
 ### Private global variables
 
 ### Initialize exported package variables
+$specdata = 0;
 
 ### Initialize private global variables
 
@@ -72,10 +73,10 @@ parse_spec_file($$)
     local *SPECFILE;
 
     if (! $specfile) {
-        # Look in the specified module
+        return 0;
     }
 
-    open(SPECFILE, $specfile) || &fatal_error("Unable to open $specfile -- $!\n");
+    open(SPECFILE, $specfile) || return 0;
     $stage = 0;
     while (<SPECFILE>) {
         chomp($line = $_);
@@ -84,6 +85,7 @@ parse_spec_file($$)
         $line = &replace_defines($oldline);
         $line =~ s/^\s+//;
         $line =~ s/\s+$//;
+        push @{$specdata->{FILE}}, $line;
         if ($oldline ne $line) {
             dprint "Parsing from $specfile, line $.: \"$oldline\" -> \"$line\"\n";
         } else {
@@ -96,8 +98,8 @@ parse_spec_file($$)
             $stage = $1;
             dprint "Switching to stage \"$stage\"\n";
             if ($stage eq "package" && $param) {
-                $pkg = "$packages[0]-$param";
-                push @packages, $pkg;
+                $pkg = $specdata->{PKGS}[0] . "-$param";
+                push @{$specdata->{PKGS}}, $pkg;
             }
         } elsif ((! $stage) && $line =~ /^\s*(\w+)\s*:\s*(.*)\s*$/) {
             my ($var, $value) = ($1, $2);
@@ -105,29 +107,29 @@ parse_spec_file($$)
             $var =~ tr/[A-Z]/[a-z]/;
             if ($var eq "name") {
                 $pkg = $value;
-                @packages = ($pkg);
+                @{$specdata->{PKGS}} = ($pkg);
                 &add_define("PACKAGE_NAME", $value);
-                &add_define("name", $value) if (! $define{"name"});
+                &add_define("name", $value) if (! $specdata->{DEFINES}{"name"});
             } elsif ($var =~ /^source(\d*)$/) {
                 my $key = ($1 ? $1 : "0");
 
                 $value =~ s/^.*\/([^\/]+)$/$1/;
-                $source{$key} = $value;
+                $specdata->{SOURCE}{$key} = $value;
                 &add_define("SOURCE$key", $value);
             } elsif ($var =~ /^patch(\d*)$/) {
                 my $key = ($1 ? $1 : "0");
 
                 $value =~ s/^.*\/([^\/]+)$/$1/;
-                $patch{$key} = $value;
+                $specdata->{PATCH}{$key} = $value;
                 &add_define("PATCH$key", $value);
             } else {
-                $header{$var} = $value;
+                $specdata->{HEADER}{$var} = $value;
                 if ($var eq "version") {
                     &add_define("PACKAGE_VERSION", $value);
-                    &add_define("version", $value) if (! $define{"version"});
+                    &add_define("version", $value) if (! $specdata->{DEFINES}{"version"});
                 } elsif ($var eq "release") {
                     &add_define("PACKAGE_RELEASE", $value);
-                    &add_define("release", $value) if (! $define{"release"});
+                    &add_define("release", $value) if (! $specdata->{DEFINES}{"release"});
                 }
             }
         } elsif ($line =~ /^%\s*define\s*(\w+)\s*(.*)$/) {
@@ -136,34 +138,35 @@ parse_spec_file($$)
     }
     close(SPECFILE);
 
-    @sources = sort {$a <=> $b} keys %source;
-    @patches = sort {$a <=> $b} keys %patch;
-    @headers = sort {uc($a) cmp uc($b)} keys %header;
+    @{$specdata->{SOURCES}} = sort {$a <=> $b} keys %{$specdata->{SOURCE}};
+    @{$specdata->{PATCHES}} = sort {$a <=> $b} keys %{$specdata->{PATCH}};
+    @{$specdata->{HEADERS}} = sort {uc($a) cmp uc($b)} keys %{$specdata->{HEADER}};
 
     if ($catalog) {
-        foreach $src (@sources) {
-            print "S:$src:$source{$src}\n";
+        foreach $src (@{$specdata->{SOURCES}}) {
+            print "S:$src:$specdata->{SOURCE}{$src}\n";
         }
-        foreach $p (@patches) {
-            print "P:$p:$patch{$p}\n";
+        foreach $p (@{$specdata->{PATCHES}}) {
+            print "P:$p:$specdata->{PATCH}{$p}\n";
         }
-        foreach $h (@headers) {
-            print "H:$h:$header{$h}\n";
+        foreach $h (@{$specdata->{HEADERS}}) {
+            print "H:$h:$specdata->{HEADER}{$h}\n";
         }
     } elsif ($debug) {
         dprint "Got the following sources:\n";
-        foreach $src (@sources) {
-            dprint "    Source $src -> $source{$src}\n";
+        foreach $src (@{$specdata->{SOURCES}}) {
+            dprint "    Source $src -> $specdata->{SOURCE}{$src}\n";
         }
         dprint "Got the following patches:\n";
-        foreach $p (@patches) {
-            dprint "    Patch $p -> $patch{$p}\n";
+        foreach $p (@{$specdata->{PATCHES}}) {
+            dprint "    Patch $p -> $specdata->{PATCH}{$p}\n";
         }
         dprint "Got the following header info:\n";
-        foreach $h (@headers) {
-            dprint "    $h -> $header{$h}\n";
+        foreach $h (@{$specdata->{HEADERS}}) {
+            dprint "    $h -> $specdata->{HEADER}{$h}\n";
         }
     }
+    return $specdata;
 }
 
 ### Private functions
@@ -174,8 +177,8 @@ add_define($$)
 {
     my ($var, $value) = @_;
 
-    $define{$var} = $value;
-    dprint "Added \%define:  $var -> $define{$var}\n";
+    $specdata->{DEFINES}{$var} = $value;
+    dprint "Added \%define:  $var -> $specdata->{DEFINES}{$var}\n";
 }
 
 # Replace %define's in a spec file line with their values
@@ -188,9 +191,9 @@ replace_defines($)
         my $var = $1;
 
         dprint "Found macro:  $var\n";
-        if (defined $define{$var}) {
-            dprint "Replacing with:  $define{$var}\n";
-            $line =~ s/\%$var/$define{$var}/g;
+        if (defined $specdata->{DEFINES}{$var}) {
+            dprint "Replacing with:  $specdata->{DEFINES}{$var}\n";
+            $line =~ s/\%$var/$specdata->{DEFINES}{$var}/g;
             reset;
         } else {
             dprint "Definition not found.\n";
@@ -200,9 +203,9 @@ replace_defines($)
         my $var = $1;
 
         dprint "Found macro:  $var\n";
-        if (defined $define{$var}) {
-            dprint "Replacing with:  $define{$var}\n";
-            $line =~ s/\%\{$var\}/$define{$var}/g;
+        if (defined $specdata->{DEFINES}{$var}) {
+            dprint "Replacing with:  $specdata->{DEFINES}{$var}\n";
+            $line =~ s/\%\{$var\}/$specdata->{DEFINES}{$var}/g;
             reset;
         } else {
             dprint "Definition not found.\n";
